--- a/tractor_inspector_finder/src/App.css
+++ b/tractor_inspector_finder/src/App.css
@@ -2,9 +2,24 @@
   text-align: center;
 }
 
+.home-container{
+  position:relative;
+  /* display:flex;
+  justify-content:center; */
+}
+
+.map{
+  height:90vh;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+}
+
+
 .map-container{
-  position:absolute;
-  top:0;
+  
+  height:55%;
+  width:50%;
 }
 
 li > span > .bold {
@@ -13,4 +28,8 @@ li > span > .bold {
 
 ul{
   list-style:none;
+}
+
+.inspector-information{
+  position:relative;
 }
