--- a/tractor_inspector_finder/src/App.css
+++ b/tractor_inspector_finder/src/App.css
@@ -1,14 +1,20 @@
 .App {
   text-align: center;
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
 .home-container{
   position:relative;
   /* display:flex;
   justify-content:center; */
+}
+
+.nav-bar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .admin-container{
