--- a/tractor_inspector_finder/src/App.css
+++ b/tractor_inspector_finder/src/App.css
@@ -1,8 +1,38 @@
 .App {
   text-align: center;
+  
   /* display: flex;
   justify-content: center;
   align-items: center; */
+} 
+
+.nav-bar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left:1rem;
+  padding-right:1rem;
+}
+
+.landing-page{
+  width:100%;
+  height:90vh;
+  background-image:url("./static/tractor_big.jpg");
+  background-size:100% 100%;
+  background-repeat: no-repeat;
+}
+
+.shading-div{
+  height:100%;
+  width:100%;
+  background-color:rgba(0, 0, 0, 0.437);
+}
+
+.landing-header{
+  color:white;
+  padding-top:10rem;
+  font-size:3rem;
+  margin:0;
 }
 
 .home-container{
@@ -11,11 +41,6 @@
   justify-content:center; */
 }
 
-.nav-bar{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
 
 .admin-container{
   text-align: center;
