--- a/tractor_inspector_finder/src/App.css
+++ b/tractor_inspector_finder/src/App.css
@@ -100,17 +100,33 @@ footer {
 }
 
 .map{
-  height:90vh;
+  height:auto;
+  width:100vw;
   display:flex;
   flex-direction:column;
   align-items:center;
+  justify-content:center;
 }
 
+.button-container{
+  display:flex;
+  margin-top:0.5rem;
+}
+
+.map-button{
+  margin-left:0.5rem;
+  margin-right:0.5rem;
+}
 
 .map-container{
-  
-  height:55%;
+  height:65vh;
   width:50%;
+  /* margin:1rem; */
+  position:relative;
+}
+
+.map > h3{
+  margin:0.25rem;
 }
 
 .bold {
@@ -123,7 +139,29 @@ ul{
 
 .inspector-information{
   position:relative;
+  
 }
+
+.inspector-table{
+  margin-top:1rem;
+}
+
+.inspector-table > tr > th{
+  text-align:center;
+  font-size:0.75rem;
+  padding:0.25rem;
+}
+
+.inspector-table > tr > td{
+  font-size:0.75rem;
+}
+
+th, td, table {
+  border: 1px solid black;
+  border-collapse:collapse;
+  margin: 0px;
+}
+
 
 a {
   text-decoration: none;
