--- a/tractor_inspector_finder/src/App.css
+++ b/tractor_inspector_finder/src/App.css
@@ -21,13 +21,18 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left:1rem;
+  padding-left:3rem;
   padding-right:1rem;
+}
+
+footer {
+  padding: 10px;
+  background-color: white;
 }
 
 .landing-page{
   width:100%;
-  height:90vh;
+  height:75vh;
   background-image:url("./static/tractor_big.jpg");
   background-size:100% 100%;
   background-repeat: no-repeat;
@@ -51,12 +56,12 @@
   position:relative;
   display:flex;
   flex-direction:column;
-  justify-content:center;
+  /* justify-content:center; */
   align-items:center;
+  min-height:95vh;
 }
 
 .home-form{
-  
   width:25%;
   background-color:azure;
   border:1px solid black;
@@ -74,25 +79,22 @@
 }
 
 .home-form-input{
-  width:9rem;
+  /* width:9rem; */
   /* float:right; */
   margin:0.5rem 0.25rem 0.5rem 0.25rem;
   padding:0.5rem;
 }
 
-/* .left{
-  float:left;
+a{padding-right:2rem;}
+
+a:hover{
+  color:blue;
 }
 
-.right{
-  float:right;
-} */
-
-
-footer {
-  padding: 10px;
-  background-color: aquamarine;
+a:visited{
+  color:rgb(5, 44, 11);
 }
+
 
 .map{
   height:auto;
@@ -163,9 +165,8 @@ a {
 }
 
 .admin-container{
-  text-align: center;
-  display: flex;
-  height:100vh;
+ 
+  min-height:75vh;
 }
 
 .admin-card-container{
