--- a/tractor_inspector_finder/src/App.css
+++ b/tractor_inspector_finder/src/App.css
@@ -25,9 +25,16 @@
   padding-right:1rem;
 }
 
+hr{
+  margin:0;
+  border-color:green;
+}
+
 footer {
   padding: 10px;
   background-color: white;
+  text-align:right;
+  padding-right:2rem;
 }
 
 .landing-page{
@@ -53,18 +60,21 @@ footer {
 }
 
 .home-container{
+  padding-top:2rem;
+  padding-bottom:2rem;
   position:relative;
   display:flex;
   flex-direction:column;
   /* justify-content:center; */
   align-items:center;
-  min-height:95vh;
+  min-height:63vh;
 }
 
 .home-form{
   width:25%;
-  background-color:azure;
-  border:1px solid black;
+  background-color:rgb(234, 246, 236);
+  color:rgb(5, 44, 11);
+  border:2px solid green;
   border-radius:5px;
   padding:1rem;
 }
@@ -74,21 +84,26 @@ footer {
 }
 
 .home-form > .button{
-  margin-top:1rem;
+  margin-top:0.5rem;
   
 }
 
 .home-form-input{
-  /* width:9rem; */
+  width:50%;
   /* float:right; */
   margin:0.5rem 0.25rem 0.5rem 0.25rem;
-  padding:0.5rem;
+  padding:0.5rem 0 0.5rem 0;
+  text-align:center;
 }
 
-a{padding-right:2rem;}
+a{
+  padding-right:2rem;
+  font-weight:normal;
+  font-size:1rem;}
 
 a:hover{
   color:blue;
+  font-weight:normal;
 }
 
 a:visited{
@@ -165,19 +180,21 @@ a {
 }
 
 .admin-container{
- 
-  min-height:75vh;
+  padding-top:2rem;
+  min-height:68vh;
+  padding-bottom:2rem;
 }
 
 .admin-card-container{
   display:flex;
   justify-content:space-evenly;
-  height:50vh;
+  height:30vh;
   align-items:center;
+  color:rgb(5, 44, 11)
 }
 
 .admin-card{
-  border:2px black solid;
+  border:2px green solid;
   border-radius:10px;
   padding:2rem;
 }
@@ -186,6 +203,7 @@ a {
   cursor:pointer;
   background-color:rgb(5, 44, 11);
   color:white;
+  border:2px white solid;
 }
 
 .admin-form-container{
@@ -200,20 +218,56 @@ a {
   flex-direction:column;
   align-items:center;
   width:50%;
+  background-color:rgb(234, 246, 236);
+  color:rgb(5, 44, 11);
+  border:1px solid black;
+  border-radius:5px;
+  padding:1rem;
+  border:2px solid green;
 }
 
 .add-inspector-form > input{
   padding:0.5rem;
-  margin-left:0.25rem;
+  margin:0.5rem;
+}
+
+.add-tractor-form{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  width:25%;
+  background-color:rgb(234, 246, 236);
+  color:rgb(5, 44, 11);
+  border:1px solid black;
+  border-radius:5px;
+  padding:1rem;
+  border:2px solid green;
 }
 
 .add-tractor-form > input{
   padding:0.5rem;
-  margin-left:0.25rem;
+  margin:0.5rem;
 }
 
 .inspector-search-form > input{
   padding:0.5rem;
-
+  margin:0.5rem;
 }
 
+.inspector-search-form{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  width:25%;
+  background-color:rgb(234, 246, 236);
+  color:rgb(5, 44, 11);
+  border:1px solid black;
+  border-radius:5px;
+  padding:1rem;
+  border:2px solid green;border:2px solid green;
+  margin-bottom:1rem;
+}
+
+tr:hover{
+  background-color:rgb(234, 246, 236);
+}
