--- a/tractor_inspector_finder/src/App.css
+++ b/tractor_inspector_finder/src/App.css
@@ -23,7 +23,10 @@
   align-items: center;
   padding-left:3rem;
   padding-right:1rem;
+  background-image: linear-gradient(to right, rgb(204, 238, 206) , rgb(209, 240, 215));
 }
+
+
 
 hr{
   margin:0;
@@ -35,6 +38,7 @@ footer {
   background-color: white;
   text-align:right;
   padding-right:2rem;
+  background-image: linear-gradient(to left, rgb(204, 238, 206) , rgb(209, 240, 215));
 }
 
 .landing-page{
@@ -122,6 +126,10 @@ a:visited{
 
 .map-info{
   display:flex;
+}
+
+.map-info > h3{
+  margin:0;
 }
 
 .button-container{
@@ -229,6 +237,13 @@ a {
 }
 
 .admin-card:hover{
+  cursor:pointer;
+  background-color:rgb(5, 44, 11);
+  color:white;
+  border:2px white solid;
+}
+
+.active{
   cursor:pointer;
   background-color:rgb(5, 44, 11);
   color:white;
