--- a/tractor_inspector_finder/src/App.css
+++ b/tractor_inspector_finder/src/App.css
@@ -1,5 +1,11 @@
+
+
+
+
+
 .App {
   text-align: center;
+ 
   color: rgb(5, 44, 11);
 } 
 
@@ -26,24 +32,24 @@
   background-image: linear-gradient(to right, rgb(204, 238, 206) , rgb(209, 240, 215));
 }
 
-
-
 hr{
   margin:0;
   border-color:green;
 }
 
 footer {
-  padding: 10px;
-  background-color: white;
-  text-align:right;
+  position:relative;
+  padding:1rem;
   padding-right:2rem;
+  
+  /* background-color: white; */
+  text-align:right;
   background-image: linear-gradient(to left, rgb(204, 238, 206) , rgb(209, 240, 215));
 }
 
 .landing-page{
   width:100%;
-  height:75vh;
+  height:90vh;
   background-image:url("./static/tractor_big.jpg");
   background-size:100% 100%;
   background-repeat: no-repeat;
@@ -68,20 +74,24 @@ footer {
   padding-bottom:2rem;
   position:relative;
   display:flex;
+  flex-wrap:wrap;
   flex-direction:column;
   /* justify-content:center; */
   align-items:center;
-  min-height:63vh;
+  min-height:75vh;
 }
 
 .home-form{
   width:25%;
+  /* width:15rem; */
   background-color:rgb(234, 246, 236);
   color:rgb(5, 44, 11);
   border:2px solid green;
   border-radius:5px;
   padding:1rem;
 }
+
+
 
 .home-form > label{
   font-weight:bold;
@@ -93,8 +103,9 @@ footer {
 }
 
 .home-form-input{
-  width:50%;
+  /* width:50%; */
   /* float:right; */
+  width:10rem;
   margin:0.5rem 0.25rem 0.5rem 0.25rem;
   padding:0.5rem 0 0.5rem 0;
   text-align:center;
@@ -181,7 +192,7 @@ a:visited{
 .inspector-table{
   margin-top:2rem;
   width:100%;
-  table-layout: auto;
+  /* table-layout: auto; */
   
 }
 
@@ -218,7 +229,7 @@ a {
 
 .admin-container{
   padding-top:2rem;
-  min-height:63vh;
+  min-height:75vh;
   padding-bottom:2rem;
 }
 
@@ -314,4 +325,29 @@ a {
 
 tr:hover{
   background-color:rgb(234, 246, 236);
+}
+
+@media (max-width: 751px){
+  .home-form{
+    width:50%;
+  }
+  
+
+  .map-container{
+    width:80%;
+  }
+
+  .inspector-information{
+    width:80%;
+    overflow-x:scroll;
+    display:block;
+  }
+
+  .inspector-table{
+    width:50%;
+  }
+
+  .map-button{
+    width:9rem;
+  }
 }
