fixed capitalise in inspector items

--- a/tractor_inspector_finder/src/App.css
+++ b/tractor_inspector_finder/src/App.css
@@ -237,6 +237,10 @@ a {
   font-weight:normal;
 }
 
+.inspector-name{
+  text-transform:capitalize;
+}
+
 .admin-container{
   padding-top:2rem;
   min-height:75vh;
